--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>this is my first website </h1>
+    <section>
+        <h1>this is my first website </h1>
+    </section>
+    
 </body>
 </html>
